# AI_solo_coder_task_B_120

./: Dockerfile.backend  Dockerfile.frontend  Dockerfile.simulator  README.md  docker-compose.yml
backend/: CMakeLists.txt  build4.txt  build5.txt  build_log.txt  build_output.txt  build_v6.txt  compile_errors_v2.txt  compile_errors_v3.txt  compile_errors_v4.txt  compile_errors_v5.txt  config.json  test_final.txt  test_final6.txt  test_final7.txt  test_final_result.txt  test_result2.txt  test_result3.txt  test_result4.txt  test_results.txt  test_results_v2.txt  test_results_v3.txt
backend/build_final_tests/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  build_log.txt  build_log2.txt  build_log3.txt  build_log5.txt  build_log6.txt  build_log7.txt  cmake_install.cmake  compile_commands.json  temp_out.txt  test_refactor_final.txt  test_refactor_final2.txt  test_refactor_final3.txt  test_run2.txt  test_run_output.txt  test_run_refactor.txt
backend/build_sight_test/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake  compile_commands.json
backend/build_tests/: CMakeCache.txt
backend/build_tests2/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json
backend/build_tests3/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json
backend/include/: accuracy_analyzer.h  accuracy_analyzer_service.h  alarm_mqtt_service.h  ballistic_simulator.h  bowstring_material.h  clickhouse_storage.h  common.h  config_manager.h  dynamics_model.h  formation_simulator.h  http_server.h  logger.h  message_queue.h  metrics.h  mqtt_alert_manager.h  sight_optics.h  udp_receiver.h
backend/include/modules/: dynamics_solver.h  formation_simulator_module.h  sight_optimizer.h  string_comparator.h  virtual_shooting.h
backend/src/: accuracy_analyzer.cpp  accuracy_analyzer_service.cpp  alarm_mqtt_service.cpp  ballistic_simulator.cpp  bowstring_material.cpp  clickhouse_storage.cpp  dynamics_model.cpp  formation_simulator.cpp  http_server.cpp  logger.cpp  main.cpp  metrics.cpp  mqtt_alert_manager.cpp  sight_optics.cpp  udp_receiver.cpp
backend/src/modules/: dynamics_solver.cpp  formation_simulator_module.cpp  sight_optimizer.cpp  string_comparator.cpp  virtual_shooting.cpp
backend/tests/: test_bowstring.cpp  test_formation.cpp  test_harness.h  test_main.cpp  test_modules.cpp  test_shooting.cpp  test_sight_optics.cpp
clickhouse/: init.sql
deploy/: mosquitto.conf  nginx.conf  prometheus.yml
frontend/: index.html
frontend/css/: style.css
frontend/js/: accuracy.js  accuracy_panel.js  app.js  config.js  crossbow3d.js  crossbow_3d.js
frontend/js/components/: formationSimulator.js  sightOptimizer.js  stringComparator.js  virtualShooting.js
simulator/: crossbow_simulator.py
